--- a/.github/workflows/push-dockerhub.yml
+++ b/.github/workflows/push-dockerhub.yml
@@ -3,7 +3,7 @@ name: Build and Push Frontend Docker image
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
   build-and-push:
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0  # Necessário para obter o commit hash completo
         
       - name: env create
-        run: echo "${{secrets.ENV}}" >> .env
+        run: echo "${{secrets.ENV_PROD}}" >> .env
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -38,7 +38,7 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${{ steps.commit.outputs.SHORT_SHA }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:novo  
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:novo
 
   deploy:
     needs: build-and-push
@@ -76,8 +76,8 @@ jobs:
   
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials cluster-dev \
-            --region ${{ secrets.GKE_REGION }} \
+          gcloud container clusters get-credentials blog-cluster-east \
+            --region ${{ secrets.GKE_REGION_PROD }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
   
       - name: Deploy to Kubernetes
