--- a/.github/workflows/pipeline-dev.yml
+++ b/.github/workflows/pipeline-dev.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0  # Necessário para obter o commit hash completo
         
       - name: env create
-        run: echo "${{secrets.ENV_PROD}}" >> .env
+        run: echo "${{secrets.ENV}}" >> .env
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -38,7 +38,7 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${{ steps.commit.outputs.SHORT_SHA }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:novo
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:novo  
 
   deploy:
     needs: build-and-push
@@ -76,16 +76,16 @@ jobs:
   
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials blog-cluster-east \
-            --region ${{ secrets.GKE_REGION_PROD }} \
+          gcloud container clusters get-credentials cluster-dev \
+            --region ${{ secrets.GKE_REGION }} \
             --project ${{ secrets.GCP_PROJECT_ID }}
   
       - name: Deploy to Kubernetes
         run: |
-          kubectl set image deployment/blog-frontend -n frontend \
+          kubectl set image deployment/blog-frontend -n app \
             blog-frontend=${{ secrets.DOCKERHUB_USERNAME }}/frontend-blogpost:${{ steps.commit.outputs.SHORT_SHA }}
           
-          kubectl patch deployment blog-frontend -n frontend \
+          kubectl patch deployment blog-frontend -n app \
             -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
 
           kubectl rollout restart deployment/blog-frontend -n frontend
